<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>cloudcardApp</groupId>
  <artifactId>cloudcardApp</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
    			<maven.compiler.source>17</maven.compiler.source>
    			<maven.compiler.target>17</maven.compiler.target>
    			<maven.compiler.release>8</maven.compiler.release>
    			<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    			<maven.compiler.args>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</maven.compiler.args>

		</properties>
  <build>
		  
		  	<plugins>
		  		<plugin>
		  			<groupId>org.apache.maven.plugins</groupId>
		  			<artifactId>maven-compiler-plugin</artifactId>
		  			<version>3.11.0</version>
		  			<configuration>
		  				<source>17</source>
		  				<target>17</target>
		  			</configuration>
		  		</plugin>
		  		
		  		<plugin>
		  			<groupId>org.apache.maven.plugins</groupId>
		  			<artifactId>maven-surefire-plugin</artifactId>
		  			<version>3.0.0-M8</version>
		  			<configuration>
		  				<suiteXmlFiles>
		  					<suiteXmlFile>testng.xml</suiteXmlFile>
		  				</suiteXmlFiles>
		  			</configuration>
		  		</plugin>
		  	
		  	</plugins>
		  
		  
		  </build>
  <dependencies>
	
	<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
<dependency>
    <groupId>io.appium</groupId>
    <artifactId>java-client</artifactId>
    <version>9.4.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
<dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-lang3</artifactId>
    <version>3.17.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
<dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>4.29.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
<dependency>
    <groupId>io.cucumber</groupId>
    <artifactId>cucumber-java</artifactId>
    <version>7.21.1</version>
</dependency>
<!-- https://mvnrepository.com/artifact/log4j/log4j -->
<dependency>
    <groupId>log4j</groupId>
    <artifactId>log4j</artifactId>
    <version>1.2.17</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-api</artifactId>
	    <version>2.0.16</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-log4j12</artifactId>
	    <version>2.0.16</version>
	    <type>pom</type>
	    <scope>test</scope>
	</dependency>
	
	
		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<dependency>
    <groupId>com.aventstack</groupId>
    <artifactId>extentreports</artifactId>
    <version>5.1.2</version>
</dependency>
<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
		<dependency>
		    <groupId>io.cucumber</groupId>
		    <artifactId>cucumber-picocontainer</artifactId>
		    <version>7.20.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/tech.grasshopper/cucumber-pdf-report -->
		<dependency>
		    <groupId>tech.grasshopper</groupId>
		    <artifactId>cucumber-pdf-report</artifactId>
		    <version>2.14.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
		<dependency>
		    <groupId>io.cucumber</groupId>
		    <artifactId>cucumber-testng</artifactId>
		    <version>7.20.1</version>
		</dependency>
<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
<dependency>
    <groupId>tech.grasshopper</groupId>
    <artifactId>extentreports-cucumber7-adapter</artifactId>
    <version>1.14.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
<dependency>
    <groupId>io.qameta.allure</groupId>
    <artifactId>allure-cucumber7-jvm</artifactId>
    <version>2.29.1</version>
</dependency>
<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
<dependency>
    <groupId>io.qameta.allure</groupId>
    <artifactId>allure-testng</artifactId>
    <version>2.29.1</version>
</dependency>

<!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
<dependency>
    <groupId>com.mailosaur</groupId>
    <artifactId>mailosaur-java</artifactId>
    <version>8.3.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
<dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-databind</artifactId>
    <version>2.19.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
<dependency>
    <groupId>ch.qos.logback</groupId>
    <artifactId>logback-classic</artifactId>
    <version>1.5.18</version>
    <scope>compile</scope>
</dependency>
  	
  </dependencies>
</project>